# rt-lightcuts-seminar

./: .gitignore  CMakeLists.txt  README.md
shaders/: CMakeLists.txt  bbox.frag  bbox.vert  bbox_lines.comp  bitonic_sort.comp  brdf.inc  common.inc  debug.frag  hit_query.rchit  hit_query.rgen  hit_query.rmiss  light_tree.comp  light_tree2.comp  light_tree_leaf_nodes.comp  lightcuts.inc  morton_encode.comp  pbr.frag  pbr.vert  points.frag  points.vert  post.frag  post.vert  prepass.frag  prepass.vert  raytracing.rchit  raytracing.rgen  raytracing.rmiss  rtx.inc  shadow.rmiss
src/: acceleration_struct.cpp  acceleration_struct.h  allocator.cpp  allocator.h  backend.cpp  backend.h  camera.cpp  camera.h  commands.cpp  commands.h  common.h  debug_util.h  descriptor.cpp  descriptor.h  file.cpp  file.h  glfw_input.cpp  glfw_window.cpp  input.cpp  input.h  log.cpp  log.h  main.cpp  math.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  profiler.cpp  profiler.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader_data.h  staging.cpp  staging.h  time.h  ui.cpp  ui.h  (+2 more)
